--- a/01_Introduccion_python.ipynb
+++ b/01_Introduccion_python.ipynb
@@ -20,12 +20,12 @@
    "metadata": {},
    "source": [
     "## ¿Que es necesario?\n",
-    "1. Tener una cuenta de gmail [http://gmail.com]  \n",
+    "1. Tener una cuenta de gmail http://gmail.com  \n",
     "![logo_gmail_lockup_default_2x_r5.png](attachment:logo_gmail_lockup_default_2x_r5.png)\n",
-    "2. Abrir la plataforma colab o validarnos en la misma. [https://colab.research.google.com/]  \n",
+    "2. Abrir la plataforma colab o validarnos en la misma. https://colab.research.google.com/  \n",
     "![colab.png](attachment:colab.png)\n",
     "3. Ver el fichero introductorio de uso de colab \"Te damos la bienvenida a Colaboratory\"\n",
-    "4. Desde el propio colab se pueden acceder a los ficheros del curso almacenados en github.  Usando la url: [https://github.com/nahumballina/cdbd.git]"
+    "4. Desde el propio colab se pueden acceder a los ficheros del curso almacenados en github.  Usando la url: https://github.com/nahumballina/cdbd.git"
    ]
   },
   {
