ejecucion de comandos locales unix

--- a/01_Introduccion_python.ipynb
+++ b/01_Introduccion_python.ipynb
@@ -183,6 +183,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "d. Ejecutar comandos unix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!df -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 Cuadernos `Jupyter`"
    ]
   },
