Segunda sesion- ejercicios de algebra lineal

--- a/02_numpy_pandas.ipynb
+++ b/02_numpy_pandas.ipynb
@@ -542,12 +542,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$B=\\left[\\begin{array}{c} 35 \\\\ 94\\end{array}\\right]$$\n",
-    "$$A=\\left[\\begin{array}{c} 1 && 2 \\\\ 1 && 4\\end{array}\\right]$$\n",
+    "$$B=\\left[\\begin{array}{c} 35 \\\\ 94\\end{array}\\right]$$  \n",
+    "\n",
+    "$$A=\\left[\\begin{array}{c} 1 && 1 \\\\ 2 && 4\\end{array}\\right]$$  \n",
+    "\n",
+    "$$X=\\left[\\begin{array}{c} pollos \\\\ conejos\\end{array}\\right]$$  \n",
     "  \n",
     "$$A*X=B$$\n",
     "\n",
-    "$$\\left[\\begin{array}{c} 1 && 2 \\\\ 1 && 4\\end{array}\\right]* X = \\left[\\begin{array}{c} 35 \\\\ 94\\end{array}\\right]$$"
+    "$$\\left[\\begin{array}{c} 1 && 1 \\\\ 2 && 4\\end{array}\\right]* X = \\left[\\begin{array}{c} 35 \\\\ 94\\end{array}\\right]$$"
    ]
   },
   {
@@ -597,7 +600,7 @@
     "\n",
     "60 = x + y + z  \n",
     "450 = 20x + 10y + 5z  \n",
-    "x+y = 2*z --> 0 = x+y-2z\n",
+    "x+y = 2*z --> 0 = x+y-2z = 2x+2y-z\n",
     "\n",
     "Pensando en forma matricial:\n",
     "\n"
@@ -607,12 +610,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$B=\\left[\\begin{array}{c} 60 \\\\ 450 \\\\ 0\\end{array}\\right]$$\n",
-    "$$A=\\left[\\begin{array}{c} 1 && 1 && 1 \\\\ 20 && 10 && 5 \\\\ 1 && 1 && 2\\end{array}\\right]$$\n",
-    "  \n",
-    "$$A*X=B$$\n",
+    "$$B=\\left[\\begin{array}{c} 60 \\\\ 450 \\\\ 0\\end{array}\\right]$$  \n",
     "\n",
-    "$$\\left[\\begin{array}{c} 1 && 1 && 1 \\\\ 20 && 10 && 5 \\\\ 1 && 1 && 2\\end{array}\\right]* X = \\left[\\begin{array}{c} 60 \\\\ 450 \\\\ 0\\end{array}\\right]$$"
+    "$$A=\\left[\\begin{array}{c} 1 && 1 && 1 \\\\ 20 && 10 && 5 \\\\ 2 && 2 && -1\\end{array}\\right]$$  \n",
+    "\n",
+    "$$X=\\left[\\begin{array}{c} grandes \\\\ medianas \\\\ pequeñas\\end{array}\\right]$$  \n",
+    "  \n",
+    "$$A*X=B$$  \n",
+    "\n",
+    "$$\\left[\\begin{array}{c} 1 && 1 && 1 \\\\ 20 && 10 && 5 \\\\ 2 && 2 && -1\\end{array}\\right]* X = \\left[\\begin{array}{c} 60 \\\\ 450 \\\\ 0\\end{array}\\right]$$"
    ]
   },
   {
