Adaptación para que coja los ejemplos del guthub

--- a/02_numpy_pandas.ipynb
+++ b/02_numpy_pandas.ipynb
@@ -1423,7 +1423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_csv = pd.read_csv(\"ficheros/wines_SPA.csv\")\n",
+    "df_csv = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/wines_SPA.csv\")\n",
     "df_csv"
    ]
   },
@@ -1463,7 +1463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_excel = pd.read_excel(\"./ficheros/wines_SPA.xlsx\")\n",
+    "df_excel = pd.read_excel(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/wines_SPA.xlsx\", engine='openpyxl')\n",
     "df_excel"
    ]
   },
@@ -1498,7 +1498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy"
+    "#import sqlalchemy"
    ]
   },
   {
@@ -1537,8 +1537,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = sqlalchemy.create_engine(s)\n",
-    "print(engine.table_names())"
+    "#engine = sqlalchemy.create_engine(s)\n",
+    "#print(engine.table_names())"
    ]
   },
   {
@@ -1554,8 +1554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vinos = pd.read_sql('SELECT * FROM vinos', engine)\n",
-    "df_vinos"
+    "#df_vinos = pd.read_sql('SELECT * FROM vinos', engine)\n",
+    "#df_vinos"
    ]
   },
   {
