Modificaciones carga de datos desde fichero

--- a/02_numpy_pandas.ipynb
+++ b/02_numpy_pandas.ipynb
@@ -1431,7 +1431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para escribir un dataframe en un fichero en formato CSV se usa la función `pandas.to_csv`."
+    "Para escribir un dataframe en un fichero en formato CSV se usa la función `pandas.to_csv`.\n",
+    "Antes de ejecutar, crear un directorio en archivos llamado ficheros."
    ]
   },
   {
@@ -1440,7 +1441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_csv.to_csv(\"./ficheros/vinos_SPA.csv\")"
+    "df_csv.to_csv(\"./ficheros/vinos_SPA.csv\")"
    ]
   },
   {
@@ -1480,7 +1481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_excel.to_excel(\"./ficheros/vinos_SPA.xlsx\")"
+    "df_excel.to_excel(\"./ficheros/vinos_SPA.xlsx\")"
    ]
   },
   {
@@ -2211,25 +2212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este ejemplo, la lista contiene los números 3 y 1, y son los valores correspondientes a estos índices -y en el orden especificado- los devueltos por la instrucción.\n",
-    "\n",
-    "El resultado devuelto sigue siendo una serie pandas:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(s[[3, 1]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Con esta notación, en el caso de que la serie tenga un índice explícito numérico, los valores de la lista se interpretan como haciendo referencia al índice explícito."
+    "En este ejemplo, la lista contiene los números 3 y 1, y son los valores correspondientes a estos índices -y en el orden especificado- los devueltos por la instrucción.\n"
    ]
   },
   {
@@ -3499,7 +3482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2.3.5.3.6 Selección con índices y etiuetas simultáneamente \n",
+    "##### 2.3.5.3.6 Selección con índices y etiquetas simultáneamente \n",
     "\n",
     "En ocasiones nos encontraremos con que resultaría de utilidad poder realizar selecciones mezclando etiquetas e índices, y los métodos vistos, `loc` e `iloc`, solo permiten el uso de etiquetas o de índices, respectivamente. Para poder mezclar ambos tipos de referencias podemos recurrir a los métodos `pandas.Index.get_loc` y `pandas.Index.get_indexer`, métodos asociados a los índices de un dataframe:\n",
     "\n",
