Lectura final del excel de vinos

--- a/02_numpy_pandas.ipynb
+++ b/02_numpy_pandas.ipynb
@@ -6658,7 +6658,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para ver como funcinan las visualizaciones, vamos a usar el dataframe df_vinos que hemos cargado previamente desde la bbdd:"
+    "Para ver como funcionan las visualizaciones, vamos a usar el dataframe df_vinos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_vinos = pd.read_excel(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/wines_SPA.xlsx\", engine='openpyxl')"
    ]
   },
   {
