Modificación de lectura de origen de datos

--- a/03_EDA vino.ipynb
+++ b/03_EDA vino.ipynb
@@ -150,16 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_username=\"root\"\n",
-    "db_password=\"root\"\n",
-    "db_host=\"localhost\"\n",
-    "db_name=\"vinos\"\n",
-    "\n",
-    "s = 'mysql+mysqlconnector://{0}:{1}@{2}/{3}'.format(db_username, db_password, db_host, db_name)\n",
-    "\n",
-    "engine = sqlalchemy.create_engine(s)\n",
-    "\n",
-    "df_vino = pd.read_sql(\"SELECT * FROM vinos\", engine)"
+    "df_vino = pd.read_excel(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/wines_SPA.xlsx\", engine='openpyxl')"
    ]
   },
   {
