--- a/03_EDA vino.ipynb
+++ b/03_EDA vino.ipynb
@@ -141,7 +141,7 @@
     "Esto ayudará tanto a la replicación futura de este proyecto como con la ejecución de proyectos futuros similares.\n",
     "\n",
     "Cargamos los datos desde sus origenes a un dataframe de pandas para su análisis.  \n",
-    "En este caso el dataset con los datos de los vinos españoles que se encuentra almacenado en bbdd."
+    "En este caso el dataset con los datos de los vinos españoles que se encuentra almacenado en git."
    ]
   },
   {
