Calidad del dato

--- a/03_EDA vino.ipynb
+++ b/03_EDA vino.ipynb
@@ -126,8 +126,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import sqlalchemy"
+    "import seaborn as sns"
    ]
   },
   {
@@ -438,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vino['acidity'].fillna(value=df_vino['acidity'].mean(), inplace=True)"
+    "df_vino.fillna({'acidity':df_vino['acidity'].mean()}, inplace=True)"
    ]
   },
   {
@@ -447,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vino['body'].fillna(value=df_vino['body'].mean(),inplace=True)"
+    "df_vino.fillna({'body':df_vino['body'].mean()},inplace=True)"
    ]
   },
   {
