Modifycación origen spotify

--- a/04_EDA spotify ejercicios.ipynb
+++ b/04_EDA spotify ejercicios.ipynb
@@ -141,8 +141,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import sqlalchemy"
+    "import seaborn as sns"
    ]
   },
   {
@@ -165,16 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_username=\"root\"\n",
-    "db_password=\"root\"\n",
-    "db_host=\"localhost\"\n",
-    "db_name=\"spotify\"\n",
-    "\n",
-    "s = 'mysql+mysqlconnector://{0}:{1}@{2}/{3}'.format(db_username, db_password, db_host, db_name)\n",
-    "\n",
-    "engine = sqlalchemy.create_engine(s)\n",
-    "\n",
-    "df_spoty = pd.read_sql(\"SELECT * FROM spotify\", engine)"
+    "df_spotyfy = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/spotify.csv\", engine='openpyxl')"
    ]
   },
   {
@@ -183,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spoty"
+    "df_spotyfy"
    ]
   },
   {
