--- a/04_EDA spotify ejercicios.ipynb
+++ b/04_EDA spotify ejercicios.ipynb
@@ -155,7 +155,7 @@
     "Esto ayudará tanto a la replicación futura de este proyecto como con la ejecución de proyectos futuros similares.\n",
     "\n",
     "Cargamos los datos desde sus origenes a un dataframe de pandas para su análisis.  \n",
-    "En este caso el dataset con los datos de reproducciones en spotifyque se encuentra almacenado en bbdd."
+    "En este caso el dataset con los datos de reproducciones en spotify."
    ]
   },
   {
