Renombrado de fichero

--- a/04_EDA spotify ejercicios.ipynb
+++ b/04_EDA spotify ejercicios.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spotyfy = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/spotify.csv\", engine='openpyxl')"
+    "df_spotify = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/spotify.csv\", engine='openpyxl')"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spotyfy"
+    "df_spotify"
    ]
   },
   {
@@ -434,7 +434,7 @@
     "def mi_boxplot(columnas):\n",
     "    fig, axs = plt.subplots(nrows=len(columnas), figsize=(8, 6 * len(columnas)))\n",
     "    for i,columna in enumerate(columnas):\n",
-    "        sns.boxplot(x=df_spoty[columna], ax=axs[i])\n",
+    "        sns.boxplot(x=df_spotify[columna], ax=axs[i])\n",
     "        axs[i].set_title(columna)\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
