--- a/04_EDA spotify ejercicios.ipynb
+++ b/04_EDA spotify ejercicios.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_spotify = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/spotify.csv\", engine='openpyxl')"
+    "df_spotify = pd.read_csv(\"https://raw.githubusercontent.com/nahumballina/cdbd/main/ficheros/spotify.csv\", sep=';')"
    ]
   },
   {
