--- a/04_EDA spotify ejercicios.ipynb
+++ b/04_EDA spotify ejercicios.ipynb
@@ -145,6 +145,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
